<resources>
    <string name="app_name">Fit4You</string>
    <string name="next">다음</string>
    <string name="prev">뒤로가기</string>
    <string name="end_exercise">운동 마치기</string>

    <!-- Sign In -->
    <string name="sign_in">LOGIN</string>
    <string name="hint_username">Username</string>
    <string name="hint_id">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_do_login">로그인 하기</string>
    <string name="btn_sign_up">회원가입</string>
    <string name="sign_in_logo">메인 로고</string>
    <string name="or">OR</string>

    <!-- Sign Up -->
    <!-- Sign Up -->
    <string name="sign_up_sign_up">회원가입</string>
    <string name="sign_up_email">이메일</string>
    <string name="sign_up_hint_email_example">예: capstone@naver.com</string>
    <string name="sign_up_double_check">중복확인</string>
    <string name="sign_up_password">비밀번호</string>
    <string name="sign_up_hint_password">비밀번호를 입력해주세요</string>
    <string name="sign_up_password_check">비밀번호 확인</string>
    <string name="sign_up_hint_password_more">비밀번호를 한 번 더 입력해주세요</string>
    <string name="sign_up_nick_name">닉네임</string>
    <string name="sign_up_hint_nick_name">예:캡스톤123</string>
    <string name="sign_up_join">가입하기</string>

    <string name="sign_up_req_all">회원정보를 전부 입력하세요.</string>
    <string name="sign_up_req_suc">가입되었습니다.</string>
    <string name="sign_up_req_nopw">비밀번호가 일치하지 않습니다.</string>

    <string name="sign_up_check_email">이메일을 입력해주세요.</string>
    <string name="sign_up_check_email_regex">이메일 양식이 맞지 않습니다.</string>

    <string name="sign_up_check_nick">닉네임을 입력해주세요.</string>
    <string name="sign_up_check_nick_regex">한글 또는 영어로 3~15자로 조합해주세요.</string>

    <string name="sign_up_check_pw">비밀번호를 입력해주세요.</string>
    <string name="sign_up_check_pw_regex">영문/숫자/특수문자(공백 제외)으로 8~16자로 조합해주세요.</string>
    <string name="sign_up_check_pw_not">비밀번호가 일치하지 않습니다.</string>

    <!--Error Message-->
    <string name="no_internet">인터넷 연결을 확인해 주세요</string>
    <string name="network_error">네트워크 에러, 다시 시도해 주세요</string>
    <string name="invalid_password">적절하지 않은 암호입니다</string>
    <string name="invalid_email_or_password">메일 또는 암호를 다시 확인해 주세요</string>
    <string name="invalid_email">적절하지 않은 메일입니다</string>
    <string name="expired_access_token">만료된 JWT입니다.</string>
    <string name="invalid_access_token">유효하지 않은 JWT입니다.</string>
    <string name="expired_refresh_token">접근 권한 재발급 실패</string>

    <!-- User History Activity -->
    <string name="history_title">선택하신 주요 통증 부위에 대한 설문을 실시할게요.</string>
    <string name="history_q1">Q1) 최근 6개월 내에 수술을 받으신 적이 있나요?</string>
    <string name="history_q2">Q2) 최근 6개월 내에 병원에서 진단받으신 적이 있나요?\n있다면 2-1번으로, 없다면 3번으로 가세요.</string>
    <string name="history_q2_1">Q2-1)진단명을 체크해주세요.</string>
    <string name="history_q3">이제 선택하신 통증 부위에 대한 관절 가동범위와 통증 정도에 대해 파악하는 검사를 실시하겠습니다.\n다음 페이지로 가주세요.</string>
    <string name="history_yes">네</string>
    <string name="history_no">아니요</string>

    <!-- Physical Data Activity -->
    <string name="user_check">사용자 상태 체크</string>
    <string name="user_physical_request">키와 몸무게를 입력해주세요.</string>
    <string name="user_height">키</string>
    <string name="user_weight">몸무게</string>
    <string name="user_sex">성별</string>
    <string name="user_age">나이</string>
    <string name="height_cm">cm</string>
    <string name="weight_kg">kg</string>
    <string name="age">세</string>

    <!-- Rom Notice -->
    <string name="note_title">안내사항</string>
    <string name="notice_1">제공되는 검사는 다음과 같습니다.</string>
    <string name="notice_2_1_1">1) 차렷자체에서 귀까지 앞으로 팔 옮기기\n(정면촬영)</string>
    <string name="notice_2_1_2">2) 차렷자세에서 귀까지 옆으로 팔 올리기\n(측면촬영)</string>
    <string name="notice_2_2_1">3) 팔꿈치를 어깨와 나란히 하고 팔 하단을 수직으로 움직이기\n(정면촬영)</string>
    <string name="notice_2_2_2">4) 팔꿈치를 어깨와 나란히 하고 팔 하단을 수직으로 움직이기\n(측면촬영)</string>
    <string name="notice_2_3_1">5) 대충 어떤 부위에 대한 테스트인지 안내하는 문구~~~~\n(정면촬영)</string>
    <string name="notice_2_3_2">6) 대충대충 어떤 부위에 대한 테스트인지 안내하는 문구~~~22\n(측면촬영)</string>
    <string name="notice_3">먼저 전문가의 영상을 시청하고,\n사용자의 영상을 촬영한 뒤,\n통증 정도에 대해 체크해주세요.</string>

    <!-- Rom Example -->
    <string name="rom_title">다음 영상을 따라해보세요.</string>
    <string name="rom1_note">1. 어깨관절을 움직이지 말고 팔을 들어올리세요.\n2. 손바닥이 몸 안쪽을 보도록 하고 팔을 들어올리세요.\n3. 자세를 유지하기 힘든 정도의 통증이 느껴지면 검사를 중단하세요.</string>

    <!-- Rom User -->
    <string name="start_capture">시작!</string>
    <string name="stop_capture">정지!</string>
    <string name="timer">3</string>

    <!-- Rom Vas -->
    <string name="vas_request">방금 실시한 검사 후에 느껴지는 통증의 정도는 어떠한가요?</string>

    <!-- User Pain Fragment -->
    <string name="pain_request">해당하는 주요 통증 부위에 \n 모두 체크해주세요.</string>
    <string name="pain_part1">목</string>
    <string name="pain_part1_1">목 - 거북목</string>
    <string name="pain_part2">어깨</string>
    <string name="pain_part2_1">어깨 - 회전근개 파열</string>
    <string name="pain_part3">허리</string>
    <string name="pain_part3_1">허리 - 허리디스크</string>
    <string name="pain_part3_2">허리 - 척추관협착증</string>
    <string name="pain_part4">손목</string>
    <string name="pain_part4_1">팔꿈치 - 골프엘보우</string>
    <string name="pain_part5">팔꿈치</string>
    <string name="pain_part5_1">무릎 - 무릎질병</string>
    <string name="pain_part5_2">골프 엘보</string>
    <string name="pain_part6">발목</string>
    <string name="pain_part6_1">발목염좌</string>
    <string name="pain_part7">기타</string>
    <string name="pain_part7_1">모르겠습니다.</string>
    <string name="pain_part7_2">없습니다.</string>


    <!-- Main Activity -->
    <string name="main_today">오늘의 운동</string>
    <string name="main_recom">추천 운동</string>
    <string name="main_record">운동 기록</string>
    <string name="main_challenge">챌린지</string>
    <string name="main_board">게시판</string>
    <string name="main_hospital">병원 찾기</string>
    <string name="main_samplenick">캡스톤</string>
    <string name="main_hello">님 안녕하세요!</string>
    <string name="main_tier">Lv.100 Challenger</string>

    <!-- Recommend Activity & Fragment -->
    <string name="recom_spec1_1">목1</string>
    <string name="recom_spec1_2">목2</string>
    <string name="recom_spec1_3">목3</string>
    <string name="recom_spec2_1">허리1</string>
    <string name="recom_spec2_2">허리2</string>
    <string name="recom_spec2_3">허리3</string>
    <string name="recom_fit_list">운동목록</string>
    <string name="recom_fit_video">운동영상</string>
    <string name="recom_fit_algo">추천영상</string>
    <string name="recom_url1">https://www.youtube.com/watch?v=H-AcDBLqxi4</string>
    <string name="recom_url2">https://www.youtube.com/watch?v=Hx8Lc_0hUaI</string>
    <string name="recom_url3">https://www.youtube.com/watch?v=ycnsfRKMPX4</string>
    <string name="recom_url4">https://www.youtube.com/watch?v=VNQpP6C1fJg</string>
    <string name="dash">-</string>
    <string name="recom_fit_info">운동정보</string>
    <string name="recom_watch">전문가 영상 시청하기</string>
    <string name="expert">전문가 영상</string>
    <string name="info">
        1.반동 줄이기
        스쿼트에서 가장 중요한 것은 엉덩이를 낮췄다가 일어나는 동작에서 반동으로 움직이는 것이 아니라 복부와 엉덩이의 힘으로 일어나야 하는데요.
        반동을 주며 횟수를 많이 하는 것은 운동 효과에 도움이 되지 않으며, 천천히 바른 자세로 제대로 하는 것이 중요합니다.\n
        2.엉덩이 쪼이기
        스쿼트에서 가장 중요한 것은 엉덩이를 낮췄다가 일어나는 동작에서 반동으로 움직이는 것이 아니라 복부와 엉덩이의 힘으로 일어나야 하는데요.
        반동을 주며 횟수를 많이 하는 것은 운동 효과에 도움이 되지 않으며, 천천히 바른 자세로 제대로 하는 것이 중요합니다.\n
        2.엉덩이 쪼이기
        스쿼트에서 가장 중요한 것은 엉덩이를 낮췄다가 일어나는 동작에서 반동으로 움직이는 것이 아니라 복부와 엉덩이의 힘으로 일어나야 하는데요.
        반동을 주며 횟수를 많이 하는 것은 운동 효과에 도움이 되지 않으며, 천천히 바른 자세로 제대로 하는 것이 중요합니다.\n
        2.엉덩이 쪼이기
        스쿼트에서 가장 중요한 것은 엉덩이를 낮췄다가 일어나는 동작에서 반동으로 움직이는 것이 아니라 복부와 엉덩이의 힘으로 일어나야 하는데요.
        반동을 주며 횟수를 많이 하는 것은 운동 효과에 도움이 되지 않으며, 천천히 바른 자세로 제대로 하는 것이 중요합니다.\n
        2.엉덩이 쪼이기
        스쿼트에서 가장 중요한 것은 엉덩이를 낮췄다가 일어나는 동작에서 반동으로 움직이는 것이 아니라 복부와 엉덩이의 힘으로 일어나야 하는데요.
        반동을 주며 횟수를 많이 하는 것은 운동 효과에 도움이 되지 않으며, 천천히 바른 자세로 제대로 하는 것이 중요합니다.\n
        2.엉덩이 쪼이기
        스쿼트에서 가장 중요한 것은 엉덩이를 낮췄다가 일어나는 동작에서 반동으로 움직이는 것이 아니라 복부와 엉덩이의 힘으로 일어나야 하는데요.
        반동을 주며 횟수를 많이 하는 것은 운동 효과에 도움이 되지 않으며, 천천히 바른 자세로 제대로 하는 것이 중요합니다.\n
        2.엉덩이 쪼이기
        스쿼트에서 가장 중요한 것은 엉덩이를 낮췄다가 일어나는 동작에서 반동으로 움직이는 것이 아니라 복부와 엉덩이의 힘으로 일어나야 하는데요.
        반동을 주며 횟수를 많이 하는 것은 운동 효과에 도움이 되지 않으며, 천천히 바른 자세로 제대로 하는 것이 중요합니다.\n
    </string>

    <!-- Result Activity & Fragment -->
    <string name="result_setN">1세트</string>
    <string name="result_totalAC">90</string>
    <string name="result_countOne">1</string>
    <string name="result_countTwo">2</string>
    <string name="result_countThr">3</string>
    <string name="result_accOne">50.23</string>
    <string name="result_accTwo">70.3</string>
    <string name="result_accThr">20.5</string>
    <string name="result_feedOne">one - asdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdf</string>
    <string name="result_feedTwo">two - asdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdf</string>
    <string name="result_feedThr">three - asdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdf</string>

    <!-- Today Activity & Fragment -->
    <string name="today_list_ex1">목</string>
    <string name="today_list_ex2">허리</string>
    <string name="today_list_ex3">어깨</string>
    <string name="today_list_ex4">발목</string>
    <string name="today_list_ex5">어찌됐던 이름이 긴 부위</string>
    <string name="today_list_go">Go!</string>
    <string name="today_notice">주의사항!</string>
    <string name="today_self_set1">1세트</string>
    <string name="today_self_set2">2세트</string>
    <string name="today_self_set3">3세트</string>
    <string name="today_timer">5</string>
    <string name="today_notice_fit">1.동작 수행이 어렵다면 벽에 붙어서 진행해도 좋습니다.\n2.허리가 굽어지지 않도록 복부에 힘을 주어 자세를 유지합니다.\n3.어깨와 골반이 지면과 수직이 되도록 유지합니다.\n4.목은 너무 뻣뻣하게 세우지 않고 편안하게 유지합니다.\n5.팔과 다리를 순차적으로 펴 줍니다.</string>

    <!-- Start Package -->
    <string name="exam_title"> 운동하기</string>
    <string name="self_next">피드백 보기</string>
    <string name="self_start">시작!</string>
    <string name="result_title">운동결과</string>
    <string name="result_bodypart">운동 부위</string>
    <string name="result_end">운동 마치기</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>