<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UserPhysicalActivity">

        <TextView
            android:id="@+id/tv_physical_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_physical_request"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_user_height"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/user_height"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginTop="80dp"
            android:layout_marginStart="60dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_physical_request"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/et_user_height"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:background="@drawable/round_corner_name_pass"
            android:paddingStart="22.91dp"
            android:paddingEnd="22.91dp"
            android:layout_marginTop="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_physical_request"
            app:layout_constraintStart_toEndOf="@+id/tv_user_height"
            app:layout_constraintEnd_toStartOf="@+id/height_cm"/>

        <TextView
            android:id="@+id/height_cm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height_cm"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="80dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_physical_request"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_user_weight"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/user_weight"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginStart="60dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_height"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/et_user_weight"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:background="@drawable/round_corner_name_pass"
            android:paddingStart="22.91dp"
            android:paddingEnd="22.91dp"
            android:layout_marginTop="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/et_user_height"
            app:layout_constraintStart_toEndOf="@+id/tv_user_weight"
            app:layout_constraintEnd_toStartOf="@+id/height_cm"/>

        <TextView
            android:id="@+id/weight_kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_kg"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="80dp"
            app:layout_constraintTop_toBottomOf="@+id/height_cm"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_physical_next"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/round_corner_do_login"
            android:layout_marginBottom="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>