<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.view.today.start.SelfActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/tb_selftitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tb_self_part"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/today_list_ex1"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exam_title"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/today_set"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tb_selftitle">

            <androidx.camera.view.PreviewView
                android:id="@+id/viewFinder"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tv_today_timer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/today_timer"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:visibility="visible" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/pb_self_loader_view"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:visibility="gone"
                app:lottie_autoPlay="true"
                app:lottie_fileName="fitforyou.json"
                app:lottie_loop="true"/>
        </FrameLayout>

        <LinearLayout
            android:id="@+id/today_set"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/btn_self_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_set1"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@drawable/round_corner_color1"
                android:gravity="center_horizontal"
                android:text="@string/today_self_set1"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_set2"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_corner_color2"
                android:gravity="center_horizontal"
                android:text="@string/today_self_set2"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_set3"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_corner_do_login"
                android:gravity="center_horizontal"
                android:text="@string/today_self_set3"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>

<!--        <androidx.appcompat.widget.AppCompatButton-->
<!--            android:id="@+id/btn_self_prev"-->
<!--            android:layout_width="100dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:layout_marginBottom="20dp"-->
<!--            android:background="@drawable/round_corner_do_login"-->
<!--            android:text="@string/prev"-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="15sp"-->
<!--            android:textStyle="bold"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toStartOf="@+id/btn_self_start"-->
<!--            app:layout_constraintStart_toStartOf="parent" />-->

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_self_start"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_corner_do_login"
            android:text="@string/self_start"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_self_next"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_self_next"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_corner_do_login"
            android:text="@string/self_next"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_self_start" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>